# svd2rust_efm32gg990

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: acmp0.rs  adc0.rs  aes.rs  burtc.rs  cmu.rs  dac0.rs  dma.rs  ebi.rs  emu.rs  etm.rs  gpio.rs  i2c1.rs  interrupt.rs  lcd.rs  lesense.rs  letimer0.rs  leuart0.rs  lib.rs  msc.rs  pcnt0.rs  prs.rs  rmu.rs  rtc.rs  timer2.rs  uart0.rs  usb.rs  vcmp.rs  wdog.rs
src/acmp0/: ctrl.rs  if_.rs  ifs.rs  inputsel.rs  route.rs  status.rs
src/acmp1/: ien.rs
src/adc0/: biasprog.rs  cal.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  scanctrl.rs  scandata.rs  scandatap.rs  singlectrl.rs  singledata.rs  singledatap.rs  status.rs
src/aes/: cmd.rs  ctrl.rs  data.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  keyha.rs  keyhb.rs  keyhc.rs  keyhd.rs  keyla.rs  keylb.rs  keylc.rs  keyld.rs  status.rs  xordata.rs
src/burtc/: cmd.rs  cnt.rs  comp0.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfxofdet.rs  lock.rs  lpmode.rs  powerdown.rs  ret0_reg.rs  ret100_reg.rs  ret101_reg.rs  ret102_reg.rs  ret103_reg.rs  ret104_reg.rs  ret105_reg.rs  ret106_reg.rs  ret107_reg.rs  ret108_reg.rs  ret109_reg.rs  ret10_reg.rs  ret110_reg.rs  ret111_reg.rs  ret112_reg.rs  ret113_reg.rs  ret114_reg.rs  ret115_reg.rs  ret116_reg.rs  ret117_reg.rs  ret118_reg.rs  ret119_reg.rs  ret11_reg.rs  ret120_reg.rs  ret121_reg.rs  ret122_reg.rs  ret123_reg.rs  ret124_reg.rs  (+103 more)
src/cmu/: auxhfrcoctrl.rs  calcnt.rs  calctrl.rs  cmd.rs  ctrl.rs  hfcoreclkdiv.rs  hfcoreclken0.rs  hfperclkdiv.rs  hfperclken0.rs  hfrcoctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lcdctrl.rs  (+11 more)
(+712 files in other folders)
