[package]
name = "efm32gg990"
version = "0.1.3"
authors = [
    "chrysn <chrysn@fsfe.org>",
    "Maxime Borges <contact@maximeborg.es>",
    "Thomas Kuenzel <tkuenzel@gmx.com>"
]
description = "Peripheral access API for EFM32GG990 microcontrollers"
documentation = "https://docs.rs/efm32gg990"
keywords = ["no-std", "arm", "cortex-m", "efm32"]
license = "MIT"
repository = "https://github.com/maximeborges/svd2rust_efm32gg990"
readme = "README.md"

[dependencies.bare-metal]
version = "0.1.1"

[dependencies.cortex-m]
version = "0.5.2"

[dependencies.cortex-m-rt]
version = "0.3.13"
optional = true

[dependencies.vcell]
version = "0.1.0"

[features]
rt = ["cortex-m-rt"]
